[package]
edition = "2021"
license = "MIT"
name = "navera"
version = "0.1.0"


[features]
default = [
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/x11",
    "bevy_kira_audio/ogg"
]

dev = [
    "bevy/dynamic",
]


[dependencies]
bevy = { version = "0.7", default-features = false }
bevy_kira_audio = { version = "0.10" }
bevy_asset_loader = { version = "0.11" }
rand = "0.8.5"

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.26.1", features=["x11"]}

[build-dependencies]
embed-resource = "1.4"

[workspace]
resolver = "2"
